# msr_trace

./: ReadMe.md  command.bash  rdpmc_demo.c  unique_counters.py
attack/: Makefile  README.md  normal_program.c  vulnerable_program.c
callchain/: Readme.md  resolve_stack.py  resolve_stack_ip.py  resolve_stack_symbol.py
capture_rdpmc/: Makefile  ReadMe.md  pmcread.c  test_pmcread.c
context/: Makefile  README.md  collect_pmc_features_mixer.py  context_mixer.c  context_mixer.h  example.c
graph/: draw.py  libpmc.excalidraw  provider-user.excalidraw
interpretability/: rank_std.py
libpmc/: BATCHING_GUIDE.md  L1_CACHE_GUIDE.md  MULTI_EVENT_GUIDE.md  Makefile  ReadMe.md  USAGE.md  collect_pmc_features.py  collect_pmc_features_mixer.py  example_cache_call.c  example_l1_cache.c  example_usage.c  pmc.c  pmc.h  pmc_events.csv  pmc_events_deterministic.csv  pmc_events_ref.csv  pmc_results.json
libpmc_dl/: CNN_COMPLETE.txt  CNN_IMPLEMENTATION.md  CNN_QUICKSTART.md  README_CNN.md  Readme.md  combo.sh  extract_events.py  preprocess_features.py  requirements.txt  run_cnn.sh  train_cnn.py  train_dual_stream_cnn.py  train_hybrid_cnn.py  train_lightgbm_gpu.py  train_xgboost_gpu.py
libpmc_ml/: NORMALIZATION_EXPLAINED.md  classifier.md  inference.py  openssl.md  os.md  train_classifier.py  train_xgboost.py  wolfssl.md
libpmc_transformer/: Readme.md  train_dual_stream.py  train_hybrid.py
pmc-insert/: CMakeLists.txt  Makefile  ReadMe.md  SUCCESS_SUMMARY.md  WORKING_STATUS.md  api_lists.csv  tool_simple.cpp
pmc-insert/test/: Makefile  ref.bash  simple_test_ref.c
(+33 files in other folders)
